--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.4
+  hive: ^2.2.3 #data_saver
+  dio: ^5.4.1 #http_client
+  crypt: ^4.3.1 #for id in notes
+
 
 
   # The following adds the Cupertino Icons font to your application.
