--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.4
   hive: ^2.2.3 #data_saver
+  hive_flutter: ^1.1.0 #for 'g' files
   dio: ^5.4.1 #http_client
   crypt: ^4.3.1 #for id in notes
 
@@ -44,7 +45,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.6 #bcs error of hive
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
